--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
 <body>
     <div class="divimagens">
         <img class="gridimagen" src="gold.jpg" alt="">
-        <h1 class="titulodog">Imagem 1</h1>
+        <h1 class="titulodog"> imagem 1</h1>
     </div>
- <div class="divimagens">
-<img class="gridimagen" src="lulu" alt="">
-<h1 class=" titulodog"> imagem 2 </h1>
- </div>
-<div class="divimagens">
-<img class="gridimagen" src="ruski.webp" alt="">
-</div>
-<div class="divimagens">
-<img class="gridimagen" src="filhote-de-pitbull-2-1280x720.jpg" alt="">
-<h1 class="titulodog">imagem 3</h1>
-</div>
-<div class="divimagen">
-<img class="gridimagen" src="images.jpeg" alt="">
-<h1 class="titulodog">imagem 4
-</h1>
-</div>
+    <div class="divimagens">
+        <img class="gridimagen" src="lulu" alt="">
+        <h1 class=" titulodog"> imagem 2 </h1>
+    </div>
+    <div class="divimagens">
+        <img class="gridimagen" src="ruski.webp" alt="">
+        <h1 class=" titulodog">imagem 3</h1>
+    </div>
+    <div class="divimagens">
+        <img class="gridimagen" src="filhote-de-pitbull-2-1280x720.jpg" alt="">
+        <h1 class="titulodog">imagem 4</h1>
+    </div>
+    <div class="divimagen">
+        <img class="gridimagens" src="images.jpeg" alt="">
+        <h1 class="titulodog">imagem 5</h1>
+        </div>
+    </div>
 </body>
 </html>
